# software-planning-mcp

./: .gitignore  Dockerfile  README.md  __init__.py  requirements.txt  server.py  setup.py  smithery.yaml  storage.py  wrapper.js
bak/: pyproject.toml
